fix logo missing in mobile view

--- a/index.html
+++ b/index.html
@@ -418,16 +418,16 @@
 									<span class="fa fa-pinterest" style="color:white"></span>
 								</a>
 							</div>
-							<div style="color: transparent">Icons made by
-								<a style="color: transparent" href="https://icon54.com/" title="Pixel perfect">Pixel perfect</a>
+							<div style="color: transparent; font-size: 4px">Icons made by
+								<a style="color: transparent; font-size: 4px" href="https://icon54.com/" title="Pixel perfect">Pixel perfect</a>
 								from
-								<a style="color: transparent" href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+								<a style="color: transparent; font-size: 4px" href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
 								is licensed by
-								<a style="color: transparent" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+								<a style="color: transparent; font-size: 4px" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+								<p style="color: transparent; font-size: 4px">
+									&copy; 2017 <a style="color: transparent" href="htpp://codeytech.com" target="_blank" title="Codeytech">Codeytech</a> All Rights Reserved
+								</p>
 							</div>
-							<!--<p>-->
-							<!--&copy; 2017 <a href="htpp://codeytech.com" target="_blank" title="Codeytech">Codeytech</a> All Rights Reserved-->
-							<!--</p>-->
 						</div>
 					</div>
 
