fix scroll to contact us

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			</div><!--.ui-navigation -->
 
 			<!-- Navbar Button -->
-			<a href="#" data-scrollto="tilted-banner" class="btn btn-sm ui-gradient-peach pull-right">Download</a>
+			<a href="#" data-scrollto="download-banner" class="btn btn-sm ui-gradient-peach pull-right">Download</a>
 
 			<!-- Navbar Toggle -->
 			<a href="#" class="ui-mobile-nav-toggle pull-right"></a>
@@ -310,7 +310,7 @@
 		</div><!-- .section -->
    		
    		<!-- Call To Action Section -->
-   		<div id="tilted-banner" class="section ui-gradient-peach ui-section-tilt ui-action-section">
+   		<div id="download-banner" class="section ui-gradient-peach ui-section-tilt ui-action-section">
    			<div class="container">
    				<div class="row">
    					<!-- Text Column -->
@@ -339,7 +339,7 @@
    		
 
    		<!-- Footer -->
-   		<footer id="contact-us" class="ui-footer contact-footer">
+   		<footer id="contact-us" class="ui-footer contact-footer section">
   			<!-- Background Gradient Layer -->
    			<div class="footer-bg">
    				<div class="container">
