--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 				<img class="logo-default" src="assets/img/tyger-logo-min-tiny.png" alt="Tyger" data-uhd>
 				<!-- Transparent Logo -->
 				<img class="logo-transparent" src="assets/img/tyger-logo-min-tiny.png" alt="Tyger" data-uhd>
+				<p class="logo-label">Play to Get Better</p>
 			</a><!-- .navbar-brand -->
 
 			<!-- Navbar Navigation -->
@@ -62,10 +63,32 @@
 				<div class="row">
 					<div class="col-md-6" data-vertical_center="true" data-vertical_offset="16">
 						<h1 class="heading animate" data-show="fade-in-up-big" data-delay="100">
-							Lorem ipsum dolor sit amet
+							The app for sports lovers and coaches
 						</h1>
+
+							<!--Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi-->
+							<!--<ul class="animate" data-show="fade-in-up-big" data-delay="400">-->
+								<!--<li style="font-size: 30px; font-weight: bold">-->
+									<!--Find-->
+								<!--</li>-->
+								<!--<li style="font-size: 30px; font-weight: bold">-->
+									<!--Train-->
+								<!--</li>-->
+								<!--<li style="font-size: 30px; font-weight: bold">-->
+									<!--Get Better-->
+								<!--</li>-->
+							<!--</ul>-->
+						<h3 class="animate hero-points" style="color:white" data-show="fade-in-up-big" data-delay="400">
+							Find.
+						</h3>
+						<h3 class="animate hero-points" style="color:white" data-show="fade-in-up-big" data-delay="400">
+							Train.
+						</h3>
+						<h3 class="animate hero-points" style="color:white" data-show="fade-in-up-big" data-delay="400">
+							Get Better.
+						</h3>
 						<p class="paragraph animate" data-show="fade-in-up-big" data-delay="400">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+						Download at Apple Store and Google Play
 						</p>
 						<div class="actions animate" data-show="fade-in-up-big" data-delay="600">
 						</div>
@@ -84,29 +107,31 @@
 						What Is Tyger
 					</h2>
 					<p class="paragraph">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
+						Tyger Sports Network is an online platform for sports lovers.
+						The first phase of our company is providing service of connecting users with coaches for personal 1-1 training session.
+						Providing flexibility for both users and coaches.
 					</p>
 				</div><!-- .section-heading -->
 				<div class="row">
 					<div class="col-sm-4 ui-icon-block">
 						<div class="icon icon-lg icon-circle icon-rocket text-blue"></div>
-						<h4>Point 1</h4>
+						<!--<h4>Point 1</h4>-->
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+							Find coaches for any sports, anytime, anywhere.
 						</p>
 					</div>
 					<div class="col-sm-4 ui-icon-block">
 						<div class="icon icon-lg icon-circle icon-ghost text-lime"></div>
-						<h4>Point 2</h4>
+						<!--<h4>Point 2</h4>-->
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+							Learn from your training summary to improve your game.
 						</p>
 					</div>
 					<div class="col-sm-4 ui-icon-block">
 						<div class="icon icon-lg icon-circle icon-trophy text-indigo"></div>
-						<h4>Point 3</h4>
+						<!--<h4>Point 3</h4>-->
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+							Assess your game by the local sports communities after 10 sessions.
 						</p>
 					</div>
 				</div><!-- .row -->
@@ -121,9 +146,9 @@
    					<h2 class="heading tyger-orange">
    						How It Works
    					</h2>
-   					<p class="paragraph">
-   						Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-   					</p>
+   					<!--<p class="paragraph">-->
+   						<!--Lorem ipsum dolor sit amet, consectetur adipisicing elit.-->
+   					<!--</p>-->
    				</div><!-- .section-heading -->
    				<!-- UI Accordion Showcase -->
    				<div class="ui-accordion-showcase row">
@@ -150,6 +175,9 @@
    								<div class="item">
    									<img src="assets/img/device-slider/app-screen.jpg" data-uhd alt="Applify - App Landing HTML Template" />	
    								</div>
+								<div class="item">
+									<img src="assets/img/device-slider/app-screen.jpg" data-uhd alt="Applify - App Landing HTML Template" />
+								</div>
    							</div>
    						</div><!-- .ui-device-slider -->
    					</div><!-- Device Slider Column -->
@@ -161,41 +189,50 @@
 							<!-- Accordion 1  -->
 							<div class="ui-card shadow-md ui-accordion">
 								<h6 class="toggle" data-toggle="accordion-one" data-toggle_screen="1" data-toggle_slider="device-slider-1">
-									<span class="icon icon-wrench"></span> 
-									Lorem Ipsum Dolor Sit
+									<!--<span class="icon icon-wrench"></span>-->
+									1. Check your sports summary
 								</h6>
 								<div class="body show" data-accord="accordion-one">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="#">Learn more.</a></p>
+									<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>-->
 								</div>
 							</div>
 							<!-- Accordion 2  -->
 							<div class="ui-card shadow-md ui-accordion">
 								<h6 class="toggle" data-toggle="accordion-two" data-toggle_screen="2" data-toggle_slider="device-slider-1">
-									<span class="icon icon-camera"></span> 
-									Amet Consectetur Adipisicing
+									<!--<span class="icon icon-camera"></span> -->
+									2. Add session
 								</h6>
 								<div class="body" data-accord="accordion-two">
-									<p>Donec elementum ligula eu sapien consequat eleifend. Donec nec dolor erat, condimentum sagittis sem. Praesent porttitor porttitor risus, dapibus rutrum ipsum gravida et. Integer lectus nisi, facilisis sit amet eleifend nec. <a href="#">Learn more.</a></p>
+									<p>Find a coach based on sports, location, and experienced level</p>
 								</div>
 							</div>
 							<!-- Accordion 3  -->
 							<div class="ui-card shadow-md ui-accordion">
 								<h6 class="toggle" data-toggle="accordion-three" data-toggle_screen="3" data-toggle_slider="device-slider-1">
-									<span class="icon icon-diamond"></span>
-									Elit Sed Do Eiusmo
+									<!--<span class="icon icon-diamond"></span>-->
+									3. Check the coaches profile and reviews
 								</h6>
 								<div class="body" data-accord="accordion-three">
-									<p>Aliquam erat volutpat. Maecenas scelerisque, orci sit amet cursus tincidunt, libero nisl eleifend tortor, vitae cursus risus mauris vitae nisi. Cras laoreet ultrices ligula eget tempus. <a href="#">Learn more.</a></p>
+									<!--<p>Aliquam erat volutpat. Maecenas scelerisque, orci sit amet cursus tincidunt, libero nisl eleifend tortor, vitae cursus risus mauris vitae nisi. Cras laoreet ultrices ligula eget tempus. <a href="#">Learn more.</a></p>-->
 								</div>
 							</div>
 							<!-- Accordion 4  -->
 							<div class="ui-card shadow-md ui-accordion">
 								<h6 class="toggle" data-toggle="accordion-four" data-toggle_screen="4" data-toggle_slider="device-slider-1">
-									<span class="icon icon-settings"></span>
-									Ea Commodo Consequat
+									<!--<span class="icon icon-settings"></span>-->
+									4. Chat with the coach
 								</h6>
 								<div class="body" data-accord="accordion-four">
-									<p>In hac habitasse platea dictumst. Pellentesque ornare blandit orci, eget tristique risus convallis ut. Vivamus a sapien neque. Morbi malesuada massa ac sapien luctus vulputate. <a href="#">Learn more.</a></p>
+									<!--<p>In hac habitasse platea dictumst. Pellentesque ornare blandit orci, eget tristique risus convallis ut. Vivamus a sapien neque. Morbi malesuada massa ac sapien luctus vulputate. <a href="#">Learn more.</a></p>-->
+								</div>
+							</div>
+							<div class="ui-card shadow-md ui-accordion">
+								<h6 class="toggle" data-toggle="accordion-five" data-toggle_screen="5" data-toggle_slider="device-slider-1">
+									<!--<span class="icon icon-settings"></span>-->
+									5. Confirm your booking
+								</h6>
+								<div class="body" data-accord="accordion-five">
+									<!--<p>In hac habitasse platea dictumst. Pellentesque ornare blandit orci, eget tristique risus convallis ut. Vivamus a sapien neque. Morbi malesuada massa ac sapien luctus vulputate. <a href="#">Learn more.</a></p>-->
 								</div>
 							</div>
 
@@ -211,7 +248,10 @@
    			<div class="container">
    				<div class="section-heading center mb-0">
    					<!-- * Replace data-video with your youtube video id -->
-   					<a class="ui-video-toggle" data-video="AcmarVpo2xE">
+					<!--https://www.youtube.com/watch?v=Yt2aypqeUbo&feature=youtu.be-->
+					<!--AcmarVpo2xE-->
+					<!--https://youtu.be/Yt2aypqeUbo-->
+   					<a class="ui-video-toggle" data-video="Yt2aypqeUbo">
    						<span class="icon ui-gradient-green fa fa-play"></span>
    					</a>
    					<h2 class="heading mt-4">
@@ -226,15 +266,15 @@
 
 
 		<!--SPORTS-->
-		<div id="sports" class="section">
+		<div id="sports" class="section bg-light">
 			<div class="container ui-icon-blocks ui-blocks-h icons-md">
 				<div class="section-heading center">
 					<h2 class="heading" style="color: #fa663b">
 						Available Sports
 					</h2>
-					<p class="paragraph">
-						Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit Sed Do Eiusmod Tempor Incididunt Ut.
-					</p>
+					<!--<p class="paragraph">-->
+						<!--Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit Sed Do Eiusmod Tempor Incididunt Ut.-->
+					<!--</p>-->
 				</div><!-- .section-heading -->
 				<!-- Icon Blocks -->
 				<div class="row">
@@ -308,7 +348,56 @@
 				</div><!-- .ui-icon-block -->
 			</div><!-- .container -->
 		</div><!-- .section -->
-   		
+
+
+
+		<div id="be-a-partner" class="section">
+			<div class="container ui-icon-blocks ui-blocks-h icons-md">
+				<div class="section-heading center">
+					<h2 class="heading" style="color: #fa663b">
+						Be A Partner
+					</h2>
+				</div><!-- .section-heading -->
+				<!-- Icon Blocks -->
+				<div class="row" style="margin-bottom: 4rem">
+					<div class="col-md-5 col-sm-5 ui-card shadow-lg partner-card" >
+						<h4 class="card-header bg-light">Coaches and Pro</h4>
+						<p class="card-body">
+							Long time Coaches and Pro wanting to improve your business and flexibility?
+							Thinking of becoming a coach with your vast sports experience as a sports player?
+							Be a partner with Tyger and we’ll help you
+						</p>
+					</div>
+					<div class="col-md-5 col-sm-5 ui-card shadow-lg partner-card">
+						<h4 class="card-header bg-light">Sports complexes & facilities</h4>
+						<p class="card-body">
+							We plan to create an easy booking system for the sports complex, coaches, and users.
+							Join us in the technology revolution!
+						</p>
+					</div>
+				</div>
+				<div class="row" style="margin-bottom: 4rem">
+					<div class="col-md-5 col-sm-5 ui-card shadow-lg partner-card">
+						<h4 class="card-header bg-light">Sports committee </h4>
+						<p class="card-body">
+							In order for our users to get better, we create an incentive system where after 10 sessions,
+							they will be assessed by someone from the local sports committee.
+							We’re looking for experience people in the sports to conduct theses assessments.
+						</p>
+					</div>
+					<div class="col-md-5 col-sm-5 ui-card shadow-lg partner-card">
+						<h4 class="card-header bg-light">Sports stores</h4>
+						<p class="card-body">
+							We plan to provide convenience for our users to get sporting goods online when they feel
+							upgrading their gears. Improve your sales by joining our online sports marketing place.
+						</p>
+					</div>
+				</div><!-- .ui-icon-block -->
+			</div><!-- .container -->
+		</div><!-- .section -->
+
+
+
    		<!-- Call To Action Section -->
    		<div id="download-banner" class="section ui-gradient-peach ui-section-tilt ui-action-section">
    			<div class="container">
@@ -318,14 +407,14 @@
    						<!-- Section Heading -->
    						<div id="download-section" class="section-heading">
 							<h2 class="heading">
-								Available on iOS and Android
+								Coming Soon on iOS and Android
 							</h2>
 							<p class="paragraph">
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
 							</p>
 							<div class="actions">
-								<a class="btn ui-gradient-green btn-app-store btn-download shadow-lg"><span>Available on the</span> <span>App Store</span></a>
-								<a class="btn ui-gradient-blue btn-google-play btn-download shadow-lg"><span>Available on </span> <span>Google Play</span></a>
+								<a class="btn ui-gradient-green btn-app-store btn-download shadow-lg"><span>Coming soon on the</span> <span>App Store</span></a>
+								<a class="btn ui-gradient-blue btn-google-play btn-download shadow-lg"><span>Coming soon on </span> <span>Google Play</span></a>
 							</div>
 						</div><!-- .section-heading -->
    					</div>
