added nav item for new section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 					<li>
 						<a href="#" data-scrollto="sports">Sports</a>
 					</li>
+                    <!-- Nav Item -->
+                    <li>
+                        <a href="#" data-scrollto="be-a-partner">Be a Partner</a>
+                    </li>
 					<!-- Nav Item -->
 					<li>
 						<a href="#" data-scrollto="contact-us">Contact Us</a>
