updated buttons and icons

--- a/index.html
+++ b/index.html
@@ -249,15 +249,22 @@
    		
    		<!-- Video Section -->
    		<div class="section bg-overlay bg-overlay-gradient-peach" data-uhd data-bg="assets/img/backgrounds/bg-1.jpg">
+			<!--<div class="section bg-overlay bg-overlay-gradient-peach" data-uhd data-bg="https://img.youtube.com/vi/Yt2aypqeUbo/hqdefault.jpg">-->
    			<div class="container">
    				<div class="section-heading center mb-0">
    					<!-- * Replace data-video with your youtube video id -->
-					<!--https://www.youtube.com/watch?v=Yt2aypqeUbo&feature=youtu.be-->
-					<!--AcmarVpo2xE-->
-					<!--https://youtu.be/Yt2aypqeUbo-->
    					<a class="ui-video-toggle" data-video="Yt2aypqeUbo">
-   						<span class="icon ui-gradient-green fa fa-play"></span>
-   					</a>
+							<!--style="background-image: url('https://img.youtube.com/vi/Yt2aypqeUbo/hqdefault.jpg')"-->
+							<span class="video-background-thumbnail" style="background-image: url('https://img.youtube.com/vi/Yt2aypqeUbo/hqdefault.jpg');
+								 	height: 315px;
+									width: 420px;
+									background-size: contain;
+									background-repeat: no-repeat;">
+   						<span class="icon ui-gradient-green fa fa-play" style="margin-top: 33%"></span>
+							</span>
+							<!--&lt;!&ndash;<img src="https://img.youtube.com/vi/Yt2aypqeUbo/hqdefault.jpg"/>&ndash;&gt;-->
+							<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/Yt2aypqeUbo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+						</a>
    					<h2 class="heading mt-4">
    						Popup Video If any
    					</h2>
@@ -365,7 +372,7 @@
 				<!-- Icon Blocks -->
 				<div class="row" style="margin-bottom: 4rem">
 					<div class="col-md-5 col-sm-5 ui-card shadow-lg partner-card" >
-						<h4 class="card-header bg-light">Coaches and Pro</h4>
+						<h4 class="card-header bg-light"><span class="icon icon-lg icon-circle icon-trophy"></span><br/><br/>Coaches and Pro</h4>
 						<p class="card-body">
 							Long time Coaches and Pro wanting to improve your business and flexibility?
 							Thinking of becoming a coach with your vast sports experience as a sports player?
@@ -373,7 +380,7 @@
 						</p>
 					</div>
 					<div class="col-md-5 col-sm-5 ui-card shadow-lg partner-card">
-						<h4 class="card-header bg-light">Sports complexes & facilities</h4>
+						<h4 class="card-header bg-light"><span class="icon icon-lg icon-circle icon-home"></span><br/><br/>Sports complexes & facilities</h4>
 						<p class="card-body">
 							We plan to create an easy booking system for the sports complex, coaches, and users.
 							Join us in the technology revolution!
@@ -382,7 +389,7 @@
 				</div>
 				<div class="row" style="margin-bottom: 4rem">
 					<div class="col-md-5 col-sm-5 ui-card shadow-lg partner-card">
-						<h4 class="card-header bg-light">Sports committee </h4>
+						<h4 class="card-header bg-light"><span class="icon icon-lg icon-circle icon-people"></span><br/><br/>Sports committee </h4>
 						<p class="card-body">
 							In order for our users to get better, we create an incentive system where after 10 sessions,
 							they will be assessed by someone from the local sports committee.
@@ -390,7 +397,7 @@
 						</p>
 					</div>
 					<div class="col-md-5 col-sm-5 ui-card shadow-lg partner-card">
-						<h4 class="card-header bg-light">Sports stores</h4>
+						<h4 class="card-header bg-light"><span class="icon icon-lg icon-circle icon-diamond"></span><br/><br/>Sports stores</h4>
 						<p class="card-body">
 							We plan to provide convenience for our users to get sporting goods online when they feel
 							upgrading their gears. Improve your sales by joining our online sports marketing place.
@@ -417,8 +424,12 @@
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
 							</p>
 							<div class="actions">
-								<a class="btn ui-gradient-green btn-app-store btn-download shadow-lg"><span>Coming soon on the</span> <span>App Store</span></a>
-								<a class="btn ui-gradient-blue btn-google-play btn-download shadow-lg"><span>Coming soon on </span> <span>Google Play</span></a>
+
+								<img src="google-play-2.png" alt="Google Play" class="responsive-on-sm g-play" style="max-width: 220px; margin-right: 20px"/>
+								<img src="app-store.png" alt="Google Play" class="responsive-on-sm a-store" style="max-width: 200px"/>
+
+								<!--<a class="btn ui-gradient-green btn-app-store btn-download shadow-lg"><span>Coming soon on the</span> <span>App Store</span></a>-->
+								<!--<a class="btn ui-gradient-blue btn-google-play btn-download shadow-lg"><span>Coming soon on </span> <span>Google Play</span></a>-->
 							</div>
 						</div><!-- .section-heading -->
    					</div>
