fixed missing image

--- a/index.html
+++ b/index.html
@@ -425,8 +425,8 @@
 							</p>
 							<div class="actions">
 
-								<img src="google-play-2.png" alt="Google Play" class="responsive-on-sm g-play" style="max-width: 220px; margin-right: 20px"/>
-								<img src="app-store.png" alt="Google Play" class="responsive-on-sm a-store" style="max-width: 200px"/>
+								<img src="assets/img/google-play-2.png" alt="Google Play" class="responsive-on-sm g-play" style="max-width: 220px; margin-right: 20px"/>
+								<img src="assets/img/app-store.png" alt="Google Play" class="responsive-on-sm a-store" style="max-width: 200px"/>
 
 								<!--<a class="btn ui-gradient-green btn-app-store btn-download shadow-lg"><span>Coming soon on the</span> <span>App Store</span></a>-->
 								<!--<a class="btn ui-gradient-blue btn-google-play btn-download shadow-lg"><span>Coming soon on </span> <span>Google Play</span></a>-->
