added app store and google play button to hero

--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@
 						<h3 class="animate hero-points" style="color:white" data-show="fade-in-up-big" data-delay="400">
 							Get Better.
 						</h3>
-						<p class="paragraph animate" data-show="fade-in-up-big" data-delay="400">
-						Download at Apple Store and Google Play
+						<p class="paragraph animate" data-show="fade-in-up-big" data-delay="400" style="margin-top: 10px">
+						<!--Download at Apple Store and Google Play-->
+              <img src="assets/img/google-play-2.png" alt="Google Play" class="responsive-on-sm g-play" style="max-width: 220px; margin-right: 10px; display: inline"/>
+              <img src="assets/img/app-store.png" alt="Google Play" class="responsive-on-sm a-store" style="max-width: 200px; display: inline"/>
 						</p>
 						<div class="actions animate" data-show="fade-in-up-big" data-delay="600">
 						</div>
