--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
 						</div>
 					</div>
 					<div class="col-md-6 animate" data-show="fade-in-left" data-delay="400">
-						<img src="assets/img/mockups/applify-mockup-2-lg.png" alt="Tyger" data-uhd data-max_width="547" class="responsive-on-sm" />
+						<!--<img src="assets/img/mockups/applify-mockup-2-lg.png" alt="Tyger" data-uhd data-max_width="547" class="responsive-on-sm" />-->
+            <img src="assets/img/final-mockups/Logo.png" alt="Tyger" data-uhd data-max_width="547" class="responsive-on-sm" />
+
 					</div>
 				</div><!-- .row -->
 			</div><!-- .container -->
@@ -175,7 +177,50 @@
 
 
 			<!-- Accordion Showcase Section -->
-			<div id="how-it-works" class="section bg-light">
+			<!--<div id="how-it-works" class="section bg-light">-->
+				<!--<div class="container">-->
+					<!--&lt;!&ndash; Section Heading &ndash;&gt;-->
+					<!--<div class="section-heading center">-->
+						<!--<h2 class="heading tyger-orange">-->
+							<!--How It Works-->
+						<!--</h2>-->
+						<!--&lt;!&ndash;<p class="paragraph">&ndash;&gt;-->
+						<!--&lt;!&ndash;Lorem ipsum dolor sit amet, consectetur adipisicing elit.&ndash;&gt;-->
+						<!--&lt;!&ndash;</p>&ndash;&gt;-->
+					<!--</div>&lt;!&ndash; .section-heading &ndash;&gt;-->
+					<!--&lt;!&ndash; UI Accordion Showcase &ndash;&gt;-->
+					<!--<div class="ui-accordion-showcase row">-->
+
+						<!--&lt;!&ndash; Device Slider Column &ndash;&gt;-->
+						<!--<div class="col-lg-6 col-md-5 animate" data-show="fade-in-left">-->
+							<!--&lt;!&ndash; Device Slider &ndash;&gt;-->
+							<!--<div class="ui-device-slider">-->
+								<!--&lt;!&ndash; Device Image &ndash;&gt;-->
+								<!--<div class="device">-->
+									<!--<img src="assets/img/final-mockups/device.png" data-uhd alt="Applify - App Landing HTML Template" />-->
+								<!--</div>-->
+								<!--&lt;!&ndash; Slider Images &ndash;&gt;-->
+								<!--<div id="device-slider-1" class="screens owl-carousel owl-theme">-->
+									<!--<div class="item">-->
+										<!--<img src="assets/img/final-mockups/Training%20Summary.png" data-uhd alt="Applify - App Landing HTML Template" />-->
+									<!--</div>-->
+									<!--<div class="item">-->
+										<!--<img src="assets/img/final-mockups/Coach%20List.png" data-uhd alt="Applify - App Landing HTML Template" />-->
+									<!--</div>-->
+									<!--<div class="item">-->
+										<!--<img src="assets/img/final-mockups/Coach%20Review.png" data-uhd alt="Applify - App Landing HTML Template" />-->
+									<!--</div>-->
+									<!--<div class="item">-->
+										<!--<img src="assets/img/final-mockups/Chat.png" data-uhd alt="Applify - App Landing HTML Template" />-->
+									<!--</div>-->
+									<!--<div class="item">-->
+										<!--<img src="assets/img/final-mockups/Confirm%20Booking.png" data-uhd alt="Applify - App Landing HTML Template" />-->
+									<!--</div>-->
+								<!--</div>-->
+							<!--</div>&lt;!&ndash; .ui-device-slider &ndash;&gt;-->
+						<!--</div>&lt;!&ndash; Device Slider Column &ndash;&gt;-->
+
+			<div id="how-it-works" class="section">
 				<div class="container">
 					<!-- Section Heading -->
 					<div class="section-heading center">
@@ -195,24 +240,24 @@
 							<div class="ui-device-slider">
 								<!-- Device Image -->
 								<div class="device">
-									<img src="assets/img/device-slider/device.png" data-uhd alt="Applify - App Landing HTML Template" />
+									<img src="assets/img/final-mockups/Background.png" data-uhd alt="Applify - App Landing HTML Template" />
 								</div>
 								<!-- Slider Images -->
 								<div id="device-slider-1" class="screens owl-carousel owl-theme">
 									<div class="item">
-										<img src="assets/img/device-slider/app-screen.jpg" data-uhd alt="Applify - App Landing HTML Template" />
+										<img src="assets/img/final-mockups/Training%20Summary.png" data-uhd alt="Applify - App Landing HTML Template" />
 									</div>
 									<div class="item">
-										<img src="assets/img/device-slider/app-screen.jpg" data-uhd alt="Applify - App Landing HTML Template" />
+										<img src="assets/img/final-mockups/Coach%20List.png" data-uhd alt="Applify - App Landing HTML Template" />
 									</div>
 									<div class="item">
-										<img src="assets/img/device-slider/app-screen.jpg" data-uhd alt="Applify - App Landing HTML Template" />
+										<img src="assets/img/final-mockups/Coach%20Review.png" data-uhd alt="Applify - App Landing HTML Template" />
 									</div>
 									<div class="item">
-										<img src="assets/img/device-slider/app-screen.jpg" data-uhd alt="Applify - App Landing HTML Template" />
+										<img src="assets/img/final-mockups/Chat.png" data-uhd alt="Applify - App Landing HTML Template" />
 									</div>
 									<div class="item">
-										<img src="assets/img/device-slider/app-screen.jpg" data-uhd alt="Applify - App Landing HTML Template" />
+										<img src="assets/img/final-mockups/Confirm%20Booking.png" data-uhd alt="Applify - App Landing HTML Template" />
 									</div>
 								</div>
 							</div><!-- .ui-device-slider -->
@@ -438,7 +483,7 @@
    					</div>
    					<!-- Image Column -->
    					<div class="col-lg-6 col-md-5 img-block animate" data-show="fade-in-left">
-   						<img src="assets/img/mockups/applify-mockup-2-lg.png" alt="Applify - App Landing HTML Template" data-uhd class="responsive-on-sm" data-max_width="547" />
+   						<img src="assets/img/final-mockups/Logo.png" alt="Applify - App Landing HTML Template" data-uhd class="responsive-on-sm" data-max_width="547" />
    					</div>
    				</div><!-- .row -->
    			</div><!-- .container -->
